--- a/estilos/style.css
+++ b/estilos/style.css
@@ -56,6 +56,7 @@ body {
 .apresentacao__conteudo__titulo {
     font-size: 2.25rem;
     font-family: var(--fonte-principal);
+    color: var(--cor-hover);
 
 }
 
@@ -66,6 +67,8 @@ body {
 .apresentacao__conteudo__texto{
     font-size: 1.5rem;
     font-family: var(--fonte-secundária);
+    text-align: justify;
+    list-style-type: none;
 }
 
 .apresentacao__links {
@@ -112,7 +115,7 @@ body {
 
 .apresentacao__imagem_logotipo {
     
-    width: 50%;
+    width: 40%;
    
 }
 
@@ -129,16 +132,20 @@ body {
 .apresentacao__conteudo__texto a{
     text-decoration: none;
     color: var(--cor-terciária);
+    text-align: justify;
 }
 
 @media  (max-width: 1200px) {
 
     .cabecalho {
         padding: 10%;
+   
     }
 
     .cabecalho__menu {
         justify-content: center;
+        gap: 40px;
+
     }
 
     .apresentacao {
