--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
 :root {
-    --cor-primaria: #fffaf0;
-    --cor-secundária: #00ffff;
-    --cor-terciária: #2f4f4f;
-    --cor-hover: #f0e68c;
+    --cor-primaria: #e5efe6;
+    --cor-secundária: #210505;
+    --cor-terciária:#d46680;
+    --cor-hover: #8a4d4f;
 
     --fonte-principal: 'Krona One', sans-serif;
     --fonte-secundária: 'Montserrat', sans-serif;
